--- a/ProyectoF/ProyectoF/ProyectoF.vcxproj.filters
+++ b/ProyectoF/ProyectoF/ProyectoF.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="ProyectoF.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Funcion multiplica.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\FunciondeResta.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\FuncionSuma.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ProyectoF.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
